--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,3 +2,18 @@
 @import "primeng/resources/themes/lara-light-blue/theme.css";
 @import "primeng/resources/primeng.css";
 @import "primeicons/primeicons.css";
+
+* {
+    margin: 0;
+    padding: 0;
+}
+.heading {
+    font-family: "Archivo", sans-serif;
+}
+
+.card {
+    .p-card{
+        border-radius: 18px;
+        box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
+    }
+}
