--- a/src/app/components/landing/landing.component.html
+++ b/src/app/components/landing/landing.component.html
@@ -16,19 +16,22 @@
                             <div class="flex flex-column xl:flex-row xl:align-items-start p-4 gap-4"
                                 [ngClass]="{ 'border-top-1 surface-border': !first }">
                                 <img class="w-9 sm:w-16rem xl:w-10rem shadow-2 block xl:block mx-auto border-round"
-                                    [src]="'https://primefaces.org/cdn/primeng/images/demo/product/' + item.image"
-                                    [alt]="item.name" />
+                                    [src]="item.carImage" [alt]="item.name" />
                                 <div
                                     class="flex flex-column sm:flex-row justify-content-between align-items-center xl:align-items-start flex-1 gap-4">
                                     <div class="flex flex-column align-items-center sm:align-items-start gap-3">
                                         <div class="text-2xl font-bold text-900">{{ item.carModel}}</div>
-                                        <p-rating [(ngModel)]="item.carRating" [readonly]="true" [cancel]="false"></p-rating>
+                                        <p-rating [(ngModel)]="item.carRating" [readonly]="true"
+                                            [cancel]="false"></p-rating>
                                         <div class="flex align-items-center gap-3">
                                             <span class="flex align-items-center gap-2">
                                                 <i class="pi pi-tag"></i>
                                                 <span class="font-semibold">{{ item.carBrand }}</span>
                                             </span>
-                                            <!-- <p-tag [value]="item.inventoryStatus" [severity]="getSeverity(item)"></p-tag> -->
+                                            <!-- <p-tag [value]="item.carInventatoryStatus" [severity]="getSeverity(item)"></p-tag> -->
+                                            <p-tag [value]="item.carInventatoryStatus.toUpperCase()"
+                                                [severity]="getSeverity(item.carInventatoryStatus)"
+                                                ></p-tag>
                                         </div>
                                     </div>
                                     <div
@@ -36,7 +39,7 @@
                                         <span class="text-2xl font-semibold">{{ '$' + item.carPrice }}</span>
                                         <button pButton icon="pi pi-shopping-cart"
                                             class="md:align-self-end mb-2 p-button-rounded"
-                                            [disabled]="item.inventoryStatus === 'OUTOFSTOCK'"></button>
+                                            [disabled]="item.carInventatoryStatus.toUpperCase() === 'OUTOFSTOCK'"></button>
                                     </div>
                                 </div>
                             </div>
